--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -204,8 +204,8 @@ $label-colors: $form-colors !default
     &::after
       @extend %loader
       position: absolute !important
-      +ltr-position(0.625em)
-      top: 0.625em
+      +ltr-position($control-padding-horizontal)
+      top: calc(50% - (1em / 2))
       z-index: 4
     &.is-small:after
       font-size: $size-small
