Support button .is-light .is-outlined hover state

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -226,6 +226,10 @@ $button-colors: $colors !default
             background-color: bulmaDarken($color-light, 5%)
             border-color: transparent
             color: $color-dark
+          &.is-outlined
+            &:hover,
+            &.is-hovered
+              border-color: $color
   // Sizes
   &.is-small
     +button-small
