Fix z-index of disabled input/select

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -69,6 +69,7 @@ $label-colors: $form-colors !default
       .button,
       .input,
       .select select
+        z-index: 1
         &:not([disabled])
           &:hover,
           &.is-hovered
@@ -80,6 +81,10 @@ $label-colors: $form-colors !default
             z-index: 3
             &:hover
               z-index: 4
+      .input,
+      .select select
+        &[disabled]
+          z-index: 0
       &.is-expanded
         flex-grow: 1
         flex-shrink: 1
