--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -142,4 +142,5 @@ $hero-body-padding-large: 18rem 1.5rem !default
 .hero-body
   flex-grow: 1
   flex-shrink: 0
+  overflow: hidden
   padding: $hero-body-padding
