Revert "is-hidden-mobile"
This reverts commit 5d4eb6197631c9438185d4537288a2139c78900a.

--- a/docs/_includes/index/fullheight.html
+++ b/docs/_includes/index/fullheight.html
@@ -1,6 +1,6 @@
 {% assign hero_link = site.data.links.by_id['layout-hero'] %}
 
-<section class="bd-index-fullscreen hero is-hidden-mobile is-fullheight is-light">
+<section class="bd-index-fullscreen hero is-fullheight is-light">
   <div class="hero-head">
     <div class="container">
       <div class="tabs is-centered">
