is-size-6-mobile
Signed-off-by: PastLearnSoul <29969521+FutureLearnSole@users.noreply.github.com>

--- a/docs/_includes/index/fullheight.html
+++ b/docs/_includes/index/fullheight.html
@@ -26,7 +26,7 @@
 
       <nav class="buttons is-centered">
         <a
-          class="button is-large is-primary"
+          class="button is-large is-primary is-size-6-mobile"
           href="{{ site.url }}{{ hero_link.path }}"
         >
           <span>Check out the <strong>Hero component</strong></span>
