--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -21,7 +21,7 @@ $bd-partner-width: 12rem
   justify-content: space-around
   justify-content: center
   margin: 0 auto
-  max-width: (8 * $bd-partner-width)
+  // max-width: (8 * $bd-partner-width)
 
 .bd-partner-sponsor
   align-items: stretch
@@ -120,9 +120,9 @@ $bd-partnrs-4: 1130px
     width: $bd-partner-width
 
 +widescreen
-  .bd-partnrs
-    .container
-      max-width: 1536px
+  // .bd-partnrs
+  //   .container
+  //     max-width: 1536px
   .bd-partner
     &.bd-is-carbon
       margin-left: 3rem
