create $darken-full, $darken-half, $darken-double, $lighten-full, $lighten-double variables to configure the 2.5%, 5%, and 10% standard darken/lighten amounts

--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -24,6 +24,15 @@ $blue:         hsl(217, 71%,  53%) !default
 $purple:       hsl(271, 100%, 71%) !default
 $red:          hsl(348, 86%, 61%) !default
 
+// Darken Amounts
+$darken-half: 2.5% !default
+$darken-full: 5% !default
+$darken-double: 10% !default
+
+// Lighten Amounts
+$lighten-full: 5% !default
+$lighten-double: 10% !default
+
 // Typography
 
 $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
