create $button-darken-half and $button-darken-full variables

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -35,6 +35,9 @@ $button-static-border-color: $border !default
 
 $button-colors: $colors !default
 
+$button-darken-half: $darken-half !default
+$button-darken-full: $darken-full !default
+
 // The button sizes use mixins so they can be used at different breakpoints
 =button-small
   border-radius: $radius-small
