use $button-darken-half and $button-darken-full to make button hover and active color states a configurable darkness

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -113,7 +113,7 @@ $button-darken-full: $darken-full !default
       color: $button-text-hover-color
     &:active,
     &.is-active
-      background-color: bulmaDarken($button-text-hover-background-color, 5%)
+      background-color: bulmaDarken($button-text-hover-background-color, $button-darken-full)
       color: $button-text-hover-color
     &[disabled],
     fieldset[disabled] &
@@ -129,7 +129,7 @@ $button-darken-full: $darken-full !default
       color: $color-invert
       &:hover,
       &.is-hovered
-        background-color: bulmaDarken($color, 2.5%)
+        background-color: bulmaDarken($color, $button-darken-half)
         border-color: transparent
         color: $color-invert
       &:focus,
@@ -140,7 +140,7 @@ $button-darken-full: $darken-full !default
           box-shadow: $button-focus-box-shadow-size bulmaRgba($color, 0.25)
       &:active,
       &.is-active
-        background-color: bulmaDarken($color, 5%)
+        background-color: bulmaDarken($color, $button-darken-full)
         border-color: transparent
         color: $color-invert
       &[disabled],
@@ -153,7 +153,7 @@ $button-darken-full: $darken-full !default
         color: $color
         &:hover,
         &.is-hovered
-          background-color: bulmaDarken($color-invert, 5%)
+          background-color: bulmaDarken($color-invert, $button-darken-full)
         &[disabled],
         fieldset[disabled] &
           background-color: $color-invert
@@ -221,12 +221,12 @@ $button-darken-full: $darken-full !default
           color: $color-dark
           &:hover,
           &.is-hovered
-            background-color: bulmaDarken($color-light, 2.5%)
+            background-color: bulmaDarken($color-light, $button-darken-half)
             border-color: transparent
             color: $color-dark
           &:active,
           &.is-active
-            background-color: bulmaDarken($color-light, 5%)
+            background-color: bulmaDarken($color-light, $button-darken-full)
             border-color: transparent
             color: $color-dark
   // Sizes
