replace static 2.5%, 5%, and 10% darken/lighten values with $darken and $lighten variables

--- a/docs/_sass/book.sass
+++ b/docs/_sass/book.sass
@@ -79,12 +79,12 @@ $book-beige: #FFEDD7
       background-color: $bleeding-green
       border-color: transparent
       &:hover
-        background-color: darken($bleeding-green, 5%)
+        background-color: darken($bleeding-green, $darken-full)
     &.bd-is-amazon
       background-color: $amazon
       border-color: transparent
       &:hover
-        background-color: darken($amazon, 5%)
+        background-color: darken($amazon, $darken-full)
       img
         margin-bottom: -11px
 
