--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -59,9 +59,9 @@ $github-pink: #ea4aaa
     margin: -1px -8px 0 7px
   &:hover,
   &:focus
-    background-color: darken($github-pink, 5%)
+    background-color: darken($github-pink, $darken-full)
   &:active
-    background-color: darken($github-pink, 10%)
+    background-color: darken($github-pink, $darken-double)
   &:hover,
   &:focus,
   &:active
