--- a/docs/_sass/header.sass
+++ b/docs/_sass/header.sass
@@ -11,11 +11,11 @@
   color: $scheme-main
   border-color: transparent !important
   &:hover
-    background-color: darken($twitter, 2.5%)
+    background-color: darken($twitter, $darken-half)
     color: $scheme-main
   &:active,
   &:focus
-    background-color: darken($twitter, 5%)
+    background-color: darken($twitter, $darken-full)
     color: $scheme-main
 
 #moreDropdown
