--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -87,16 +87,16 @@
       background-color: $mauve
       color: $scheme-main
       &:hover
-        background-color: darken($mauve, 2.5%)
+        background-color: darken($mauve, $darken-half)
       &:active
-        background-color: darken($mauve, 5%)
+        background-color: darken($mauve, $darken-full)
     &.is-link
       background-color: $pink
       color: $scheme-main
       &:hover
-        background-color: darken($pink, 2.5%)
+        background-color: darken($pink, $darken-half)
       &:active
-        background-color: darken($pink, 5%)
+        background-color: darken($pink, $darken-full)
   +selection
     background-color: $pink
     color: $scheme-main
