--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -250,9 +250,9 @@
   border-color: transparent
   color: #fff
   &:hover
-    background-color: darken($rss, 5%)
+    background-color: darken($rss, $darken-full)
   &:active
-    background-color: darken($rss, 10%)
+    background-color: darken($rss, $darken-double)
 
 .bd-view-all-versions
   color: $text-light
