--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -74,7 +74,7 @@ $navbar-colors: $colors !default
           &:focus,
           &:hover,
           &.is-active
-            background-color: bulmaDarken($color, 5%)
+            background-color: bulmaDarken($color, $darken-full)
             color: $color-invert
         .navbar-link
           &::after
@@ -92,7 +92,7 @@ $navbar-colors: $colors !default
             &:focus,
             &:hover,
             &.is-active
-              background-color: bulmaDarken($color, 5%)
+              background-color: bulmaDarken($color, $darken-full)
               color: $color-invert
           .navbar-link
             &::after
@@ -100,7 +100,7 @@ $navbar-colors: $colors !default
         .navbar-item.has-dropdown:focus .navbar-link,
         .navbar-item.has-dropdown:hover .navbar-link,
         .navbar-item.has-dropdown.is-active .navbar-link
-          background-color: bulmaDarken($color, 5%)
+          background-color: bulmaDarken($color, $darken-full)
           color: $color-invert
         .navbar-dropdown
           a.navbar-item
