--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -127,9 +127,9 @@ $tag-colors: $colors !default
       width: 1px
     &:hover,
     &:focus
-      background-color: darken($tag-background-color, 5%)
+      background-color: darken($tag-background-color, $darken-full)
     &:active
-      background-color: darken($tag-background-color, 10%)
+      background-color: darken($tag-background-color, $darken-double)
   &.is-rounded
     border-radius: $radius-rounded
 
