--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -31,7 +31,7 @@ $file-colors: $form-colors !default
       &:hover,
       &.is-hovered
         .file-cta
-          background-color: bulmaDarken($color, 2.5%)
+          background-color: bulmaDarken($color, $darken-half)
           border-color: transparent
           color: $color-invert
       &:focus,
@@ -43,7 +43,7 @@ $file-colors: $form-colors !default
       &:active,
       &.is-active
         .file-cta
-          background-color: bulmaDarken($color, 5%)
+          background-color: bulmaDarken($color, $darken-full)
           border-color: transparent
           color: $color-invert
   // Sizes
@@ -127,16 +127,16 @@ $file-colors: $form-colors !default
   position: relative
   &:hover
     .file-cta
-      background-color: bulmaDarken($file-cta-background-color, 2.5%)
+      background-color: bulmaDarken($file-cta-background-color, $darken-half)
       color: $file-cta-hover-color
     .file-name
-      border-color: bulmaDarken($file-name-border-color, 2.5%)
+      border-color: bulmaDarken($file-name-border-color, $darken-half)
   &:active
     .file-cta
-      background-color: bulmaDarken($file-cta-background-color, 5%)
+      background-color: bulmaDarken($file-cta-background-color, $darken-full)
       color: $file-cta-active-color
     .file-name
-      border-color: bulmaDarken($file-name-border-color, 5%)
+      border-color: bulmaDarken($file-name-border-color, $darken-full)
 
 .file-input
   height: 100%
