--- a/sass/form/select.sass
+++ b/sass/form/select.sass
@@ -50,7 +50,7 @@ $select-colors: $form-colors !default
         border-color: $color
         &:hover,
         &.is-hovered
-          border-color: bulmaDarken($color, 5%)
+          border-color: bulmaDarken($color, $darken-full)
         &:focus,
         &.is-focused,
         &:active,
