--- a/sass/helpers/color.sass
+++ b/sass/helpers/color.sass
@@ -5,7 +5,7 @@
   a.has-text-#{$name}
     &:hover,
     &:focus
-      color: bulmaDarken($color, 10%) !important
+      color: bulmaDarken($color, $darken-double) !important
   .has-background-#{$name}
     background-color: $color !important
   @if length($pair) >= 4
@@ -17,7 +17,7 @@
     a.has-text-#{$name}-light
       &:hover,
       &:focus
-        color: bulmaDarken($color-light, 10%) !important
+        color: bulmaDarken($color-light, $darken-double) !important
     .has-background-#{$name}-light
       background-color: $color-light !important
     // Dark
@@ -26,7 +26,7 @@
     a.has-text-#{$name}-dark
       &:hover,
       &:focus
-        color: bulmaLighten($color-dark, 10%) !important
+        color: bulmaLighten($color-dark, $lighten-double) !important
     .has-background-#{$name}-dark
       background-color: $color-dark !important
 
