add comment about button darken variables

--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -35,6 +35,7 @@ $button-static-border-color: $border !default
 
 $button-colors: $colors !default
 
+// how much to darken the buttons when they are in hover or active state
 $button-darken-half: $darken-half !default
 $button-darken-full: $darken-full !default
 
