--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -72,6 +72,11 @@ route: documentation
                   <li {% if link_id == current_link_id %}class="is-active"{% endif %}>
                     <a href="{{ site.url }}{{ link.path }}">
                       {{ link.name }}
+                      {% if link.new %}
+                        <span class="ml-2 tag bd-mini-tag is-primary">
+                          New!
+                        </span>
+                      {% endif %}
                     </a>
                   </li>
                 {% endfor %}
