feat: adds fullwidth to dropdown buttons

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4693,6 +4693,20 @@ fieldset[disabled] .select select:hover {
   top: auto;
 }
 
+.dropdown.is-fullwidth {
+  width: 100%;
+}
+
+.dropdown.is-fullwidth .dropdown-menu {
+  width: 100%;
+}
+
+.dropdown.is-fullwidth .button {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
 .dropdown-menu {
   display: none;
   left: 0;
