--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -35,6 +35,14 @@ $dropdown-divider-background-color: $border-light !default
       padding-bottom: $dropdown-content-offset
       padding-top: initial
       top: auto
+  &.is-fullwidth
+    width: 100%
+    .dropdown-menu
+      width: 100%
+    .button
+      display: flex
+      width: 100%
+      justify-content: space-between
 
 .dropdown-menu
   display: none
