Improve wording of container usage description
The word "either" is meant to be used for two things, but the list contains 4 items. Proposing that "either" is replaced with "one of the following" for improved grammar.

--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -101,7 +101,7 @@ meta:
 
 <div class="content">
   <p>
-    The <code>container</code> is a simple utility element that allows you to <strong>center</strong> content on larger viewports. It can be used in any context, but mostly as a <strong>direct child</strong> of either:
+    The <code>container</code> is a simple utility element that allows you to <strong>center</strong> content on larger viewports. It can be used in any context, but mostly as a <strong>direct child</strong> of one of the following:
   </p>
   <ul>
     <li><code>navbar</code></li>
