--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -259,7 +259,7 @@ $button-colors: $colors !default
     box-shadow: none
     pointer-events: none
   &.is-rounded
-    border-radius: $radius-rounded
+    border-radius: $radius-rounded !important
     padding-left: calc(#{$button-padding-horizontal} + 0.25em)
     padding-right: calc(#{$button-padding-horizontal} + 0.25em)
 
@@ -279,7 +279,7 @@ $button-colors: $colors !default
   // Sizes
   &.are-small
     .button:not(.is-normal):not(.is-medium):not(.is-large)
-      +button-small
+    	+button-small
   &.are-medium
     .button:not(.is-small):not(.is-normal):not(.is-large)
       +button-medium
