--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -8197,7 +8197,7 @@ label.panel-block:hover {
   margin-right: calc(-1 * var(--columnGap));
 }
 
-.columns.is-variable .column {
+.columns.is-variable > .column {
   padding-left: var(--columnGap);
   padding-right: var(--columnGap);
 }
@@ -9394,6 +9394,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 
 .is-clickable {
   cursor: pointer !important;
+  pointer-events: all !important;
 }
 
 .is-clipped {
