--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -469,7 +469,7 @@ $column-gap: 0.75rem !default
     --columnGap: 0.75rem
     +ltr-property("margin", calc(-1 * var(--columnGap)), false)
     +ltr-property("margin", calc(-1 * var(--columnGap)))
-    .column
+    > .column
       padding-left: var(--columnGap)
       padding-right: var(--columnGap)
     @for $i from 0 through 8
